[package]
name = "rm67162"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32s3",
] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32s3",
  "integrated-timers",
] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", features = [
  "esp32s3",
  "log",
] }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-196608"] }
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
tinygif = "0.0.4"
embedded-vintage-fonts = "0.2.0"

[features]
default = []

[env]
ESP_HAL_PLACE_SPI_DRIVER_IN_RAM = "true"
